--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,9 +16,11 @@
             </intent-filter>
         </activity>
         <activity
-            android:name="com.ants.SignUpPage"
+            android:name=".SignUpPage"
             android:label="@string/title_activity_sign_up_page"
-            android:theme="@style/AppTheme.NoActionBar"></activity>
+            android:theme="@style/AppTheme.NoActionBar" />
+        <activity android:name=".User.DementiaPage" />
+        <activity android:name=".Answered"></activity>
     </application>
 
 </manifest>
