--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -24,7 +24,7 @@
             android:name=".SignUpPage"
             android:label="@string/title_activity_sign_up_page"
             android:theme="@style/AppTheme.NoActionBar" />
-        <activity android:name=".User.DementiaPage" />
+        <activity android:name=".DementiaPage" />
         <activity android:name=".Answered"></activity>
 
     </application>
